cmake_minimum_required(VERSION 3.23)
project(AtCoder C)

set(CMAKE_C_STANDARD 11)

add_executable(ABC-A ABC/276/A-Rightmost.c)
add_executable(ABC-B ABC/276/A-Rightmost.c)
add_executable(ABC-C ABC/276/A-Rightmost.c)
add_executable(ABC-D ABC/276/A-Rightmost.c)
add_executable(ABC-E ABC/276/A-Rightmost.c)
add_executable(ABC-F ABC/276/A-Rightmost.c)
add_executable(ABC-G ABC/276/A-Rightmost.c)
add_executable(ABC-Ex ABC/276/A-Rightmost.c)
